# sc-lint

./: .atm.toml  .codespellignore  .codespellrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  deny.toml
.claude-plugin/: marketplace.json
.claude/agents/: arch-qa.md  critical-plan-reviewer.md  flaky-test-qa.md  plan-scope-reviewer.md  publisher.md  qa-triage.md  quality-mgr.md  registry.yaml  req-qa.md  scrum-master.md
.claude/skills/codex-orchestration/: SKILL.md  arch-qa-assignment.json.j2  dev-template.xml.j2  fix-assignment.xml.j2  flaky-test-qa-assignment.json.j2  qa-template.xml.j2  req-qa-assignment.json.j2  review-template.xml.j2
.claude/skills/phase-orchestration/: SKILL.md
.claude/skills/plan-hardening/: 01-plan-scope-review.xml.j2  02-sprint-scope-hardening.xml.j2  03-consistency-hardening.xml.j2  SKILL.md  plan-hardening.xml.j2
.claude/skills/quality-management-gh/: SKILL.md  findings-report.md.j2
.claude/skills/restore-team-communications/: SKILL.md
.claude/skills/sc-lint-version-adoption/: SKILL.md
.claude/skills/sprint-report/: SKILL.md  report-detailed.md.j2  report.md.j2
.claude/skills/team-lead/: SKILL.md  backup-and-restore-team.md
.claude/skills/todo-triage/: SKILL.md
.claude/skills/triaging-findings/: SKILL.md
.github/workflows/: ci.yml  release-preflight.yml  release.yml
.just/: check_version_sync.py  fixture_constants.py  lint-config.toml  lint_boundaries.py  lint_cargo_deny.py  lint_cargo_modules.py  lint_cargo_shear.py  lint_codespell.py  lint_common.py  lint_identity_literals.py  lint_line_counts.py  lint_manifests.py  lint_sc_boundary.py  lint_sc_portability.py  print_help.py  python_adapter.py  run_fmt.py  run_lint.py  run_pytests.py  run_version.py  view_common.py  view_findings.py
.just/tests/: test_check_version_sync.py  test_lint_boundaries.py  test_lint_cargo_modules.py  test_lint_common.py  test_lint_external_tools.py  test_lint_identity_literals.py  test_lint_line_counts.py  test_lint_manifests.py  test_lint_sc_boundary.py  test_lint_sc_portability.py  test_print_help.py  test_python_adapter.py  test_run_fmt.py  test_run_lint.py  test_run_pytests.py  test_run_version.py  test_view_common.py  test_view_findings.py
.triage/phase-A/findings/: A5-NEW-002.ttl  A5-NEW-003.ttl  A5-NEW-004.ttl  (+62 more)
boundaries/: planning.toml
boundaries/sc-lint/: top-level-cli.toml
boundaries/sc-lint-attributes/: attribute-surface.toml
boundaries/sc-lint-boundary/: boundary-analyzer.toml
boundaries/sc-lint-directives/: directive-model.toml
boundaries/sc-lint-portability/: portability-analyzer.toml
boundaries/sc-lint-runtime/: runtime-analyzer.toml
boundaries/sc-lint-schema/: schema.toml
boundaries/sc-lint-tokio/: tokio-analyzer.toml
crates/sc-lint/: Cargo.toml  README.md
crates/sc-lint-attributes/: Cargo.toml  README.md
crates/sc-lint-attributes/src/: lib.rs
crates/sc-lint-boundary/: Cargo.toml  README.md
crates/sc-lint-boundary/config/: defaults.toml
crates/sc-lint-boundary/src/: analysis.rs  graph.rs  inventory.rs  lib.rs  main.rs  manifest_policy.rs  package_policy.rs  portability.rs  render.rs  tests.rs
crates/sc-lint-boundary/src/graph/: build.rs  mod.rs  reference_collector.rs  utils.rs
crates/sc-lint-boundary/src/inventory/: dependency_policy.rs  mod.rs  tests.rs  types.rs
crates/sc-lint-directives/: Cargo.toml  README.md
crates/sc-lint-directives/src/: lib.rs
crates/sc-lint-portability/: Cargo.toml  README.md
crates/sc-lint-portability/config/: defaults.toml
crates/sc-lint-portability/src/: lib.rs  main.rs  portability.rs  predicates.rs  render.rs  source_scan.rs  tests.rs
crates/sc-lint-runtime/: Cargo.toml  README.md
crates/sc-lint-runtime/src/: lib.rs  main.rs  runtime.rs  source_scan.rs  tests.rs
crates/sc-lint-schema/: Cargo.toml  README.md
crates/sc-lint-schema/src/: lib.rs
crates/sc-lint/src/: cli.rs  command.rs  config.rs  consts.rs  contract.rs  dispatch.rs  error.rs  lib.rs  logging.rs  main.rs  python_adapter.rs  render.rs  tests.rs  workflow.rs
crates/sc-lint/tests/: logging_integration.rs
docs/: WINGET_SETUP.md  architecture.md  cross-platform-guidelines.md  issues-inventory.md  project-plan.md  release-inventory-schema.json  release-tag-protection.md  requirements.md  team-protocol.md
docs/phase-A/: foundation-phase-plan.md  sprint-A1.md  sprint-A1a.md  sprint-A3.md  sprint-A4.md  sprint-A5.md  sprint-A6.md  sprint-A7.md  sprint-A8.md
docs/phase-B/: phase-B-plan.md  sprint-B-homebrew.md  sprint-B1.md  sprint-B2.md  sprint-B3.md  sprint-B4.md
docs/phase-C/: phase-C-plan.md  sprint-C1.md  sprint-C10.md  sprint-C2.md  sprint-C3.md  sprint-C4.md  sprint-C5.md  sprint-C6.md  sprint-C7.md  sprint-C8.md  sprint-C9.md
docs/phase-D/: phase-D-plan.md  sprint-D1.md
docs/sc-lint/: README.md  architecture.md  atm-core-import-candidates.md  boundary-enforcement-model.md  boundary-toml-migration.md  cli-architecture.md  cli-contract.md  cli-requirements.md  crate-architecture.md  extraction-plan.md  foundation-phase-plan.md  graph-schema.md  interface-reporting-constraints.md  logging.md  minimal-marketplace-constraints.md  mvp.md  phase-B-plan.md  phase-C-plan.md  requirements.md  roadmap.md  skill-authoring-constraints.md  sprint-A1.md  sprint-A1a.md  sprint-A1b.md  sprint-A2.md  sprint-A3.md  sprint-A4.md  sprint-A5.md  sprint-A6.md  sprint-A7.md  sprint-A8.md  sprint-B-homebrew.md  sprint-B1.md  sprint-B2.md  sprint-B3.md  sprint-B4.md  sprint-C1.md  sprint-C10.md  sprint-C2.md  sprint-C3.md  (+12 more)
docs/sc-lint-boundary/: architecture.md  boundary-enforcement-model.md  boundary-toml-migration.md  requirements.md
docs/sc-lint-portability/: architecture.md  requirements.md
docs/sc-lint-runtime/: architecture.md  requirements.md
docs/sc-lint-version/: architecture.md  requirements.md
homebrew-tap/Formula/: sc-lint-boundary.rb  sc-lint.rb
release/: RELEASE-NOTES-TEMPLATE.md  publish-artifacts.toml
scripts/: find_todos.py  release_artifacts.py  release_gate.sh  test_find_todos.py  test_triage_carry_forward.py  triage_carry_forward.py
(+60 files in other folders)
