[workspace]
members = [
  "crates/sc-lint",
  "crates/sc-lint-directives",
  "crates/sc-lint-attributes",
  "crates/sc-lint-boundary",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rand Lee"]
license = "MIT"
repository = "https://github.com/randlee/sc-lint"
homepage = "https://github.com/randlee/sc-lint"
rust-version = "1.94.1"

[workspace.dependencies]
anyhow = "1"
cargo_metadata = "0.20"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
