[package]
name = "sc-lint-attributes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Source-level declarative attributes for sc-lint analyzers."
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
sc-lint-directives = { version = "0.1.0", path = "../sc-lint-directives" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
