[package]
name = "sc-lint-attributes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Source-level declarative attributes for sc-lint analyzers."
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
sc-lint-directives = { version = "0.3.1", path = "../sc-lint-directives" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
