[package]
name = "sc-lint-portability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "AST-sensitive Rust portability analyzer."
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "sc-lint-portability"
path = "src/main.rs"

[lib]
name = "sc_lint_portability"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
sc-lint-schema = { version = "0.2.0", path = "../sc-lint-schema" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
