[package]
name = "sc-lint-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared machine schema types for sc-lint analyzer outputs."
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
name = "sc_lint_schema"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
