[package]
name = "sc-lint"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Top-level CLI composition root for the sc-lint tool family."
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[[bin]]
name = "sc-lint"
path = "src/main.rs"

[lib]
name = "sc_lint"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
dunce = "1"
sc-observability.workspace = true
sc-lint-boundary = { version = "0.1.0", path = "../sc-lint-boundary" }
sc-lint-schema = { version = "0.1.0", path = "../sc-lint-schema" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
serial_test = "3"
tempfile = "3"
